--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://dpmanek.github.io/MLflow",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"react": "^19.0.0",
