--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"dependencies": {
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-icons": "^5.5.0"
+		"react-icons": "^5.5.0",
+		"react-router-dom": "^6.22.3"
 	},
 	"devDependencies": {
 		"@types/react": "^19.0.10",
