--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"highcharts": "^12.2.0",
+		"highcharts-react-official": "^3.2.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.5.0",
 		"react-router-dom": "^6.22.3"
 	},
 	"devDependencies": {
+		"@types/node": "^22.14.1",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
