--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,5 @@ jobs:
         with:
           folder: dist # The folder the action should deploy
           branch: gh-pages # The branch the action should deploy to
+          force: true # Force push to the gh-pages branch
+          clean: true # Automatically remove deleted files from the deploy branch
